--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "deepmerge": "^4.2.2",
     "fibers": "^5.0.0",
     "object-to-formdata": "^4.2.2",
+    "shamsi-date-converter": "^1.0.5",
     "vue": "^2.6.11",
     "vue-advanced-cropper": "^1.9.0",
+    "vue-persian-datetime-picker": "^2.10.4",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2",
